change home to index

--- a/InDesign.html
+++ b/InDesign.html
@@ -29,14 +29,14 @@
     <nav>
         <ul>
             <div class="items">
-                <a href="home.html">
+                <a href="index.html">
                     <li>Home</li>
                 </a>
                 <a href="resume.html">
                     <li>Resume</li>
                 </a>
                 <!-- Created in Canva By Me -->
-                <a href="home.html"><img src="images/PortfolioLogo.png" alt="Logo"></a>
+                <a href="index.html"><img src="images/PortfolioLogo.png" alt="Logo"></a>
                 <a href="projects.html">
                     <li class="active">Projects</li>
                 </a>
