--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <nav>
         <ul>
             <div class="items">
-                <a href="home.html">
+                <a href="index.html">
                     <li class="active">Home</li>
                 </a>
                 <a href="resume.html">
                     <li>Resume</li>
                 </a>
-                <a href="home.html"><img src="images/PortfolioLogo.png" alt="Logo"></a>
+                <a href="index.html"><img src="images/PortfolioLogo.png" alt="Logo"></a>
                 <a href="projects.html">
                     <li>Projects</li>
                 </a>
