--- a/projects.html
+++ b/projects.html
@@ -27,9 +27,9 @@
     <nav>
         <ul>
           <div class="items">
-            <a href="home.html"><li>Home</li></a>
+            <a href="index.html"><li>Home</li></a>
             <a href="resume.html"><li>Resume</li></a>
-            <a href="home.html"><img src="images/PortfolioLogo.png" alt="Logo"></a>
+            <a href="index.html"><img src="images/PortfolioLogo.png" alt="Logo"></a>
             <a href="projects.html"><li class="active">Projects</li></a>
             <a href="contact.html"><li>Contact</li></a>
           </div>
