--- a/resume.html
+++ b/resume.html
@@ -30,13 +30,13 @@
     <nav>
         <ul>
             <div class="items">
-                <a href="home.html">
+                <a href="index.html">
                     <li>Home</li>
                 </a>
                 <a href="resume.html">
                     <li class="active">Resume</li>
                 </a>
-                <a href="home.html"><img src="images/PortfolioLogo.png" alt="Logo"></a>
+                <a href="index.html"><img src="images/PortfolioLogo.png" alt="Logo"></a>
                 <a href="projects.html">
                     <li>Projects</li>
                 </a>
