Intial upload for GitHub Pages

--- a/resume.html
+++ b/resume.html
@@ -49,15 +49,12 @@
 
     <main>
         <section class="heading">
-        <h1>My Resume</h1>
-        <h2>View or Download below</h2>
+            <h1>My Resume</h1>
+            <h2>View or Download below</h2>
         </section>
-        
+
         <section class="pdf-viewer">
-            <iframe 
-                src="Mattilyn Fehr Resume.pdf"
-                class="pdf-frame"
-                title="Embedded PDF">
+            <iframe src="Mattilyn Fehr Resume.pdf" class="pdf-frame" title="Embedded PDF">
             </iframe>
 
             <p class="pdf-download">
